# flounder_game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: cpp-build.yml  cpp-lint.yml  cpp-unittest.yml  format.yml
src/: CMakeLists.txt  game.cpp  game.h  main.cpp  player.h  player.hpp  turn_game.h
src/command_line/: command_line_options.cpp  command_line_options.h  command_line_parser.cpp  command_line_parser.h
src/game/: game.h  game.hpp  game_context.h  game_information.h  player.h  player.hpp  turn_game.h
src/game/discovery/: discovery_game.h
src/input/: input.h
src/output/: cerr_output.h  cout_output.h  file_output.h  output.h  output_levels.h  output_manager.h
src/utils/: concepts.h  constants.h  flags.h  parameters.h  utils.h
test/: CMakeLists.txt  command_line_tests.cpp  mock_output_manager.h  output_tests.cpp  random_helper.h  some_test.cpp  test_helper.h
test/helpers/: random.h
